fix: broken links broken

--- a/imdb_movie_queries.ipynb
+++ b/imdb_movie_queries.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "## Dataset Overview\n",
     "\n",
-    "The dataset below a preprocessed version of the [The Ultimate 1Million Movies Dataset (TMDB + IMdb)](https://www.kaggle.com/datasets/alanvourch/tmdb-movies-daily-updates) by Alan Vourc'h. The processing script can be found at [`oridim/ds220-pandas-project/process_datasets.py`](https://github.com/oridim/tree/main/ds220-pandas-project/process_datasets.py). All it does is:\n",
+    "The dataset below a preprocessed version of the [The Ultimate 1Million Movies Dataset (TMDB + IMdb)](https://www.kaggle.com/datasets/alanvourch/tmdb-movies-daily-updates) by Alan Vourc'h. The processing script can be found at [`oridim/ds220-pandas-project/process_datasets.py`](https://github.com/oridim/ds220-pandas-project/blob/main/datasets/process_datasets.py). All it does is:\n",
     "\n",
     "- Project specific needed fields for the analysis found in this Jupyter notebook.\n",
     "- Strip out rows with missing column data.\n",
@@ -32,7 +32,7 @@
     "- Limit the rows to only English (the language, not the British) movies that have been already released.\n",
     "- Limit the rows to only movies that had a theatrical release (i.e. no made-for-TV movies).\n",
     "\n",
-    "The already processed dataset can be found at [`oridim/ds220-pandas-project/datasets/oridim.movies.cleaned.csv`](https://github.com/oridim/ds220-pandas-project/tree/main/datasets/oridim.movies.cleaned.csv)\n",
+    "The already processed dataset can be found at [`oridim/ds220-pandas-project/datasets/oridim.movies.cleaned.csv`](https://github.com/oridim/ds220-pandas-project/blob/main/datasets/oridim.imdb.cleaned.csv)\n",
     "\n",
     "> **INSTRUCTIONS**: Click the play icon on the following two code cells to see the sample top 25 movies by box office revenue."
    ]
